@@ -2,13 +2,8 @@
 setlocal
 cd /d "%~dp0"
 
-if exist "release\DSE-ERP\DSE-ERP.exe" (
-    start "DSE ERP" "release\DSE-ERP\DSE-ERP.exe"
-    exit /b 0
-)
-
 if exist "target\DSE_Final.jar" (
-    start "DSE ERP" javaw -Dprism.order=sw -jar "target\DSE_Final.jar"
+    start "DSE ERP" javaw --enable-preview -Dfile.encoding=UTF-8 -jar "target\DSE_Final.jar"
     exit /b 0
 )
 
